We now use conditions to set the left/right classes for small tiles, instead of odd/even. This makes it more "idiot proof".

--- a/sites/all/themes/audible/sass/components/_tile.scss
+++ b/sites/all/themes/audible/sass/components/_tile.scss
@@ -48,18 +48,17 @@
   // Every second small tile is being tweaked to create the crease between tiles.
   // This way of doing it makes sure that we can maintain a responsive layout
   // without adjusting the markup.
-  // The "left" and "right" classes are set with .js instead of using odd/even.
-  // This is done since CSS doesn't handle odd/even children very well when
-  // there are other elements between them (ex: tile--large).
+  // The "left" and "right" classes are set with js. This is done due to the
+  // need for conditionals to determine if the previous element is a large tile.
   padding: 0;
-  &:nth-child(odd) {
+  &.left {
     padding-right: 6px;
     a span {
       left: 0;
       right: 6px;
     }
   }
-  &:nth-child(even) {
+  &.right {
     padding-left: 6px;
     a span {
       right: 0;
