Added styling of the new frontpage tiles content type to replace our old "menu icons" solution

--- a/sites/all/themes/audible/sass/components/_tile.scss
+++ b/sites/all/themes/audible/sass/components/_tile.scss
@@ -25,7 +25,7 @@
     @extend .heading--extra-small;
   }
   // Title
-  a span {
+  span {
     @extend .heading--extra-small;
     font-family: 'hill regular', sans-serif;
     margin-bottom: 0;
