Audioguide bypass route

--- a/sites/all/themes/audible/sass/components/_mediaelement-audio-skin.scss
+++ b/sites/all/themes/audible/sass/components/_mediaelement-audio-skin.scss
@@ -143,6 +143,13 @@
 
 }
 
+.page-audio--no-playlist-context {
+  .mediaplayer {
+    .audio-title {
+      display: none;
+    }
+  }
+}
 
 /*
  § Tweaked CSS from mediaelementjs
